--- a/src/Wodsoft.ComBoost/project.json
+++ b/src/Wodsoft.ComBoost/project.json
@@ -28,6 +28,6 @@
     }
   },
   "dependencies": {
-    "Wodsoft.ComBoost.Core": "3.0.0-*"
+    "Wodsoft.ComBoost.Core": "[3.0.0-alpha1,4.0.0)"
   }
 }
