--- a/src/samples/Wodsoft.ComBoost.Forum/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/project.json
@@ -2,7 +2,7 @@
   "version": "1.0.0-*",
   "dependencies": {
     "Wodsoft.ComBoost.AspNetCore.Security": "3.0.0-*",
-    "Wodsoft.ComBoost.EntityFramework": "3.0.0-*",
+    "Wodsoft.ComBoost.EntityFrameworkCore": "3.0.0-*",
     "Wodsoft.ComBoost.Forum.Entity": "1.0.0-*",
     "Wodsoft.ComBoost.Forum.Domain": "1.0.0-*",
     "Wodsoft.ComBoost.Mvc.Data": "3.0.0-*",
