--- a/src/Wodsoft.ComBoost.Security/Wodsoft.ComBoost.Security.csproj
+++ b/src/Wodsoft.ComBoost.Security/Wodsoft.ComBoost.Security.csproj
@@ -4,6 +4,7 @@
     <AssemblyTitle>Wodsoft.ComBoost.Security</AssemblyTitle>
     <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <AssemblyName>Wodsoft.ComBoost.Security</AssemblyName>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
