--- a/common.props
+++ b/common.props
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Product>Wodsoft ComBoost</Product>
     <PackageTags>ComBoost</PackageTags>
-    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionPrefix>3.0.4</VersionPrefix>
     <VersionSuffix></VersionSuffix>
     <VersionSuffix Condition="'$(BuildNumber)' != ''">$(VersionSuffix)-$(BuildNumber)</VersionSuffix>
     <Authors>Kation</Authors>
@@ -12,5 +12,6 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <NetStandardImplicitPackageVersion>2.0.0</NetStandardImplicitPackageVersion>
     <PackageReleaseNotes></PackageReleaseNotes>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 </Project>
