--- a/test/Wodsoft.ComBoost.EntityFrameworkCore.Test/Wodsoft.ComBoost.EntityFrameworkCore.Test.csproj
+++ b/test/Wodsoft.ComBoost.EntityFrameworkCore.Test/Wodsoft.ComBoost.EntityFrameworkCore.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,25 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="3.0.3">
+    <PackageReference Include="coverlet.collector" Version="1.3.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Lokad.ILPack" Version="0.1.6" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.Data\Wodsoft.ComBoost.Data.csproj" />
     <ProjectReference Include="..\..\src\Wodsoft.ComBoost.EntityFrameworkCore\Wodsoft.ComBoost.EntityFrameworkCore.csproj" />
-    <ProjectReference Include="..\..\src\Wodsoft.ComBoost.Mock\Wodsoft.ComBoost.Mock.csproj" />
     <ProjectReference Include="..\Wodsoft.ComBoost.Test.Common\Wodsoft.ComBoost.Test.Common.csproj" />
   </ItemGroup>
 
