--- a/test/Wodsoft.ComBoost.Test.Common/Wodsoft.ComBoost.Test.Common.csproj
+++ b/test/Wodsoft.ComBoost.Test.Common/Wodsoft.ComBoost.Test.Common.csproj
@@ -11,10 +11,12 @@
   
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.15" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.6" />
   </ItemGroup>
 
   <ItemGroup>
